--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "body-parser": "^1.18.2",
     "core-js": "^2.5.1",
     "express": "^4.16.2",
+    "node-resque": "^4.0.9",
+    "redis": "^2.8.0",
+    "rsmq": "^0.8.3",
+    "rsmq-worker": "^0.5.2",
     "rxjs": "^5.5.2",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.18"
