--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@angular/router": "^5.0.3",
     "body-parser": "^1.18.2",
     "core-js": "^2.5.1",
+    "d3": "^4.12.0",
     "express": "^4.16.2",
     "node-resque": "^4.0.9",
     "redis": "^2.8.0",
+    "request-promise": "^4.2.2",
     "rsmq": "^0.8.3",
     "rsmq-worker": "^0.5.2",
     "rxjs": "^5.5.2",
+    "socket.io": "^2.0.4",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.18"
   },
