--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "bitcoin-graph",
   "version": "0.0.0",
   "license": "MIT",
+  "main": "server.js",
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "test": "ng test",
-    "build": "ng build && node server.js",
+    "postinstall": "ng build --prod",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor"
   },
@@ -24,6 +25,8 @@
     "@angular/platform-browser": "^5.0.3",
     "@angular/platform-browser-dynamic": "^5.0.3",
     "@angular/router": "^5.0.3",
+    "angular-cli": "1.0.0-beta.28.3",
+    "@angular/compiler-cli": "^5.0.3",
     "body-parser": "^1.18.2",
     "core-js": "^2.5.1",
     "d3": "^4.12.0",
@@ -38,11 +41,13 @@
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.18"
   },
+  "engines": {
+    "node": "8.9.1",
+    "npm": "5.5.1"
+  },
   "devDependencies": {
-    "@angular/compiler-cli": "^5.0.3",
     "@types/jasmine": "2.8.2",
     "@types/node": "^8.0.53",
-    "angular-cli": "1.0.0-beta.28.3",
     "codelyzer": "~4.0.1",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
