--- a/package.json
+++ b/package.json
@@ -59,6 +59,6 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.1.0",
     "karma-remap-istanbul": "^0.6.0",
-    "protractor": "~5.2.0",
+    "protractor": "~5.2.0"
   }
 }
