--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser-dynamic": "^5.0.3",
     "@angular/router": "^5.0.3",
     "@types/node": "^8.0.53",
+    "@types/socket.io-client": "^1.4.32",
     "angular-cli": "1.0.0-beta.28.3",
     "body-parser": "^1.18.2",
     "core-js": "^2.5.1",
