--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@angular/platform-browser-dynamic": "^5.0.3",
     "@angular/router": "^5.0.3",
     "@types/node": "^8.0.53",
-    "@types/socket.io-client": "^1.4.32",
+    "@types/socket.io-client": "1.4.32",
     "angular-cli": "1.0.0-beta.28.3",
     "body-parser": "^1.18.2",
     "core-js": "^2.5.1",
@@ -39,7 +39,7 @@
     "rsmq": "^0.8.3",
     "rsmq-worker": "^0.5.2",
     "rxjs": "^5.5.2",
-    "socket.io": "^2.0.4",
+    "socket.io": "2.0.4",
     "ts-helpers": "^1.1.2",
     "ts-node": "3.3.0",
     "tslint": "^5.8.0",
