--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "body-parser": "^1.18.2",
     "core-js": "^2.5.1",
     "d3": "^4.12.0",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "node-resque": "^4.0.9",
     "redis": "^2.8.0",
@@ -40,6 +41,7 @@
     "rsmq-worker": "^0.5.2",
     "rxjs": "^5.5.2",
     "socket.io": "2.0.4",
+    "socket.io-client": "^2.0.4",
     "ts-helpers": "^1.1.2",
     "ts-node": "3.3.0",
     "tslint": "^5.8.0",
