--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@angular/router": "^5.0.3",
     "@types/node": "^8.0.53",
     "@types/socket.io-client": "1.4.32",
-    "angular-cli": "1.0.0-beta.28.3",
     "body-parser": "^1.18.2",
     "core-js": "^2.5.1",
     "d3": "^4.12.0",
@@ -53,6 +52,7 @@
     "npm": "5.5.1"
   },
   "devDependencies": {
+    "@angular/cli": "^1.6.7",
     "@types/jasmine": "2.8.2",
     "codelyzer": "~4.0.1",
     "jasmine-core": "2.8.0",
