--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "dependencies": {
     "@angular/animations": "^5.1.1",
     "@angular/cdk": "^5.0.1",
+    "@angular/cli": "^1.6.7",
     "@angular/common": "^5.0.3",
     "@angular/compiler": "^5.0.3",
     "@angular/compiler-cli": "^5.0.3",
-    "@angular/cli": "^1.6.7",
     "@angular/core": "^5.0.3",
     "@angular/forms": "^5.0.3",
     "@angular/http": "^5.0.3",
@@ -45,7 +45,7 @@
     "ts-helpers": "^1.1.2",
     "ts-node": "3.3.0",
     "tslint": "^5.8.0",
-    "typescript": "~2.6.2",
+    "typescript": "^2.4.2",
     "zone.js": "^0.8.18"
   },
   "engines": {
